# sunspec

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  sync-model-notes.py
.github/workflows/: rust.yml
examples/model103/: Cargo.toml  README.md
examples/model103/src/: main.rs
examples/model701_tls/: Cargo.toml
examples/model701_tls/pki/: ca.key  ca.pem  cav3.key  cav3.pem  cav3.srl  clientv3.csr  clientv3.key  clientv3.pem  generate_ecc.sh  generate_rsa.sh  server.key  server.pem  serverv3.csr  serverv3.key  serverv3.pem  truststore.p12  v3.ext
examples/model701_tls/src/: main.rs
examples/model712/: Cargo.toml  README.md
examples/model712/src/: main.rs
examples/readme/: Cargo.toml
examples/readme/src/: main.rs
src/: constants.rs  discovery.rs  error.rs  group.rs  lib.rs  model.rs  models.rs  point.rs  tokio_modbus.rs  utils.rs  value.rs
src/client/: async.rs  config.rs  discovery.rs  error.rs  mod.rs  tokio_modbus.rs
src/models/: mod.rs  model1.rs  model10.rs  model101.rs  model102.rs  model103.rs  model11.rs  model111.rs  model112.rs  model113.rs  model12.rs  model120.rs  model121.rs  model122.rs  model123.rs  model124.rs  model125.rs  model126.rs  model127.rs  model128.rs  model129.rs  model13.rs  model130.rs  model131.rs  model132.rs  model133.rs  model134.rs  model135.rs  model136.rs  model137.rs  model138.rs  model139.rs  model14.rs  model140.rs  model141.rs  model142.rs  model143.rs  model144.rs  model145.rs  model15.rs  (+74 more)
sunspec-cli/: Cargo.toml
sunspec-cli/src/: main.rs
sunspec-gen/: Cargo.toml
sunspec-gen/src/: doc.rs  gen.rs  json.rs  lib.rs  main.rs  manifest.rs  smdx.rs
tests/: test_model1.rs  test_model103.rs  test_model712.rs  test_serde.rs
