[package]
name = "sunspec"
version = "0.4.0"
edition = "2021"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "SunSpec 1.1 compliant library with tokio support"
keywords = ["sunspec", "models", "generated"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/sunspec"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-modbus"]
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
bitflags = "2.4.1"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.26.0", features = ["derive"] }
thiserror = "1.0.50"
tokio-modbus = { version = "0.11.0", optional = true }

[dev-dependencies]
serde_json = "1.0.114"

[workspace]
members = ["sunspec-gen", "examples/*"]
