[package]
name = "sunspec"
version = "0.8.0"
edition = "2021"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "SunSpec 1.1 compliant library with tokio support"
keywords = ["sunspec", "models", "generated"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/sunspec"
readme = "README.md"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-modbus", "all-models"]
serde = ["dep:serde", "bitflags/serde"]
tokio = ["dep:tokio", "tokio/time"]
tokio-modbus = ["dep:tokio-modbus", "tokio"]
# BEGIN generated model features
all-models = [
    "model1",
    "model2",
    "model3",
    "model4",
    "model5",
    "model6",
    "model7",
    "model8",
    "model9",
    "model10",
    "model11",
    "model12",
    "model13",
    "model14",
    "model15",
    "model16",
    "model17",
    "model18",
    "model19",
    "model101",
    "model102",
    "model103",
    "model111",
    "model112",
    "model113",
    "model120",
    "model121",
    "model122",
    "model123",
    "model124",
    "model125",
    "model126",
    "model127",
    "model128",
    "model129",
    "model130",
    "model131",
    "model132",
    "model133",
    "model134",
    "model135",
    "model136",
    "model137",
    "model138",
    "model139",
    "model140",
    "model141",
    "model142",
    "model143",
    "model144",
    "model145",
    "model160",
    "model201",
    "model202",
    "model203",
    "model204",
    "model211",
    "model212",
    "model213",
    "model214",
    "model220",
    "model302",
    "model303",
    "model304",
    "model305",
    "model306",
    "model307",
    "model308",
    "model401",
    "model402",
    "model403",
    "model404",
    "model501",
    "model502",
    "model601",
    "model701",
    "model702",
    "model703",
    "model704",
    "model705",
    "model706",
    "model707",
    "model708",
    "model709",
    "model710",
    "model711",
    "model712",
    "model713",
    "model714",
    "model715",
    "model801",
    "model802",
    "model803",
    "model804",
    "model805",
    "model806",
    "model807",
    "model808",
    "model809",
    "model63001",
    "model63002",
    "model64001",
    "model64020",
    "model64101",
    "model64111",
    "model64112",
    "model64410",
    "model64411",
    "model64412",
    "model64413",
    "model64414",
    "model64415",
]
model1 = []
model2 = []
model3 = []
model4 = []
model5 = []
model6 = []
model7 = []
model8 = []
model9 = []
model10 = []
model11 = []
model12 = []
model13 = []
model14 = []
model15 = []
model16 = []
model17 = []
model18 = []
model19 = []
model101 = []
model102 = []
model103 = []
model111 = []
model112 = []
model113 = []
model120 = []
model121 = []
model122 = []
model123 = []
model124 = []
model125 = []
model126 = []
model127 = []
model128 = []
model129 = []
model130 = []
model131 = []
model132 = []
model133 = []
model134 = []
model135 = []
model136 = []
model137 = []
model138 = []
model139 = []
model140 = []
model141 = []
model142 = []
model143 = []
model144 = []
model145 = []
model160 = []
model201 = []
model202 = []
model203 = []
model204 = []
model211 = []
model212 = []
model213 = []
model214 = []
model220 = []
model302 = []
model303 = []
model304 = []
model305 = []
model306 = []
model307 = []
model308 = []
model401 = []
model402 = []
model403 = []
model404 = []
model501 = []
model502 = []
model601 = []
model701 = []
model702 = []
model703 = []
model704 = []
model705 = []
model706 = []
model707 = []
model708 = []
model709 = []
model710 = []
model711 = []
model712 = []
model713 = []
model714 = []
model715 = []
model801 = []
model802 = []
model803 = []
model804 = []
model805 = []
model806 = []
model807 = []
model808 = []
model809 = []
model63001 = []
model63002 = []
model64001 = []
model64020 = []
model64101 = []
model64111 = []
model64112 = []
model64410 = []
model64411 = []
model64412 = []
model64413 = []
model64414 = []
model64415 = []
# END generated model features

[dependencies]
bitflags = "2.6.0"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.6"
tokio = { version = "1.40.0", default-features = false, optional = true }
tokio-modbus = { version = "0.17", optional = true }

[dev-dependencies]
serde_json = "1.0.114"

[workspace]
members = [
    "sunspec-gen",
    "examples/readme",
    "examples/model103",
    "examples/model712",
]
