[package]
name = "sunspec-gen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
codegen = "0.2.0"
heck = "0.4.1"
itertools = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
thiserror = "1.0.50"
