[package]
name = "sunspec-gen"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
heck = "0.5.0"
prettyplease = "0.2.22"
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde = { version = "1.0.190", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
syn = "2.0.77"
thiserror = "2.0.12"
