[package]
name = "sunspec-example-model103"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-modbus = { version = "0.15", features = ["tcp"] }
sunspec = { path = "../../" }
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.13.0"
