[package]
name = "model701_tls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.44"
base64 = "0.22.1"
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.14.0"
pem = "3.0.5"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls = { version = "0.23.12", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
sunspec = { path = "../../" }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time"] }
tokio-modbus = { version = "0.16.1", features = ["tcp"] }
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"
