[package]
name = "sunspec-example-readme"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13.0"
sunspec = { path = "../../" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-modbus = "0.16"
